--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="main.vue"></script>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
-  <title>Vue Cdn</title>
+  <title>Todo App</title>
 </head>
 
 <body>
