--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://unpkg.com/vue@3"></script>
   <script src="main.vue"></script>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="https://ih1.redbubble.net/image.1811713324.3610/st,small,845x845-pad,1000x1000,f8f8f8.jpg">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
   <title>Todo App</title>
 </head>
